2011-11-27  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (create-server): Remove coding-system argument.
	([defstruct] connection): Remove coding-system slot.
	(connection.external-format, *coding-system*): Deleted.
	(make-connection, start-server, create-server, setup-server)
	(accept-connections): Drop coding-system arg.

	(connection-info): Return supported coding systems.
	(create-repl, open-dedicated-output-stream)
	(open-streams, initialize-streams-for-connection): Add
	coding-system arg.

	* slime.el (slime-init-command): Ignore the coding-system arg.
	(slime-connection-coding-systems): New connection variable.
	(slime-set-connection-info): Set it.

2011-11-27  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (eval-in-frame-aux): Don't bind *package* during
	eval.

2011-11-21  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp: Trigger compilation of utf8 stuff before first
	real use.

2011-11-21  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (*sldb-printer-bindings*): Removed.  Rather useless
	since the change from 2009-02-26.  It could at best have some
	influence on the way conditions are printed.  *sldb-string-length*
	and *sldb-bitvector-length* where both nil so
	*sldb-pprint-dispatch-table* was also not used by default.  In
	summary, spending 3 pages for something that's not used by default
	was pretty silly.  One variable less where we can get the defaults
	wrong.

2011-11-21  Helmut Eller  <heller@common-lisp.net>

	* slime.el (sldb-eval-in-frame): Try to figure the package out.
	Ask Lisp if the function for frame was defined in a particular
	package and use it to read the form.
	(sldb-read-form-for-frame): New helper.

	* swank-backend (frame-package): New.
	* swank-cmucl (frame-package): Implement it.

	* swank.lisp (frame-package-name, eval-in-frame-aux): New.
	(eval-string-in-frame, pprint-eval-string-in-frame): Use package
	argument.

2011-11-19  Nikodemus Siivola  <nikodemus@random-state.net>
